Changed local image to image from cloud storage bucket

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 		<header id="header">
 			<div class="inner">
 				<a href="#" class="image avatar"
-					><img src="images/avatar.jpg" alt=""
+					><img
+						src="https://storage.googleapis.com/dicoding-deploy-profile/avatar.jpg"
+						alt=""
 				/></a>
 				<h1>
 					<strong>I am Samuel Eric Yonatan</strong>, a college student and a
@@ -55,8 +57,12 @@
 				<h2>Recent Work</h2>
 				<div class="row">
 					<article class="col-6 col-12-xsmall work-item">
-						<a href="images/work-1.jpeg" class="image fit thumb"
-							><img src="images/work-1.jpeg" alt=""
+						<a
+							href="https://storage.googleapis.com/dicoding-deploy-profile/work-1.jpeg"
+							class="image fit thumb"
+							><img
+								src="https://storage.googleapis.com/dicoding-deploy-profile/work-1.jpeg"
+								alt=""
 						/></a>
 						<h3>Serverless Web Application</h3>
 						<p>
@@ -67,8 +73,12 @@
 						</p>
 					</article>
 					<article class="col-6 col-12-xsmall work-item">
-						<a href="images/work-2.jpeg" class="image fit thumb"
-							><img src="images/work-2.jpeg" alt=""
+						<a
+							href="https://storage.googleapis.com/dicoding-deploy-profile/work-2.jpeg"
+							class="image fit thumb"
+							><img
+								src="https://storage.googleapis.com/dicoding-deploy-profile/work-2.jpeg"
+								alt=""
 						/></a>
 						<h3>Machine Learning Model Deployment on Cloud</h3>
 						<p>
@@ -79,8 +89,12 @@
 						</p>
 					</article>
 					<article class="col-6 col-12-xsmall work-item">
-						<a href="images/work-3.jpeg" class="image fit thumb"
-							><img src="images/work-3.jpeg" alt=""
+						<a
+							href="https://storage.googleapis.com/dicoding-deploy-profile/work-3.jpeg"
+							class="image fit thumb"
+							><img
+								src="https://storage.googleapis.com/dicoding-deploy-profile/work-3.jpeg"
+								alt=""
 						/></a>
 						<h3>Data Pipeline for Big Data Analytics</h3>
 						<p>
@@ -91,8 +105,12 @@
 						</p>
 					</article>
 					<article class="col-6 col-12-xsmall work-item">
-						<a href="images/work-4.jpeg" class="image fit thumb"
-							><img src="images/work-4.jpeg" alt=""
+						<a
+							href="https://storage.googleapis.com/dicoding-deploy-profile/work-4.jpeg"
+							class="image fit thumb"
+							><img
+								src="https://storage.googleapis.com/dicoding-deploy-profile/work-4.jpeg"
+								alt=""
 						/></a>
 						<h3>Multi-Region Cloud Infrastructure for High Availability</h3>
 						<p>
